syntax="proto3";

option go_package ="generated/users/";
package protos;

service UserService{
    rpc CresteUser(CresteUserRequest) returns (CresteUserResponse);

    rpc GetByIdUser(GetByIdUserRequest) returns (GetByIdUserResponse);

    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);

    rpc UpdateUser(UpdateUserrequest) returns (UpdateUserResponse);
}

message CresteUserRequest{
    string name=1;
    int32 age=2;
    string gendor=3;
    int32 year=4;
    string id=5;
}

message CresteUserResponse{
    bool success=1;
}

message GetByIdUserRequest{
    string user_id=1;
}

message GetByIdUserResponse{
    string user_id=1;
    string name=2;
    string age=3;
    string gendor=4;
    string year=5;
}

message DeleteUserRequest{
    string user_id=1;
}

message DeleteUserResponse{
    bool success=1;
}

message UpdateUserrequest{
    string user_id=1;
    string name=2;
    string age=3;
    string gendor=4;
    string year=5;
}

message UpdateUserResponse{
    bool success=1;
}